--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="flex flex-col justify-center items-center   ">
-        <p class="md:text-7xl text-3xl font-bold mt-12">Why choose us</p>
+        <p class="md:text-7xl text-3xl font-bold md:mt-12 mt-4">Why choose us</p>
         <div  class="flex flex-col justify-center items-center md:gap-10 gap-2 pb-20"> 
             <img class="bg-cover h- 12/12 w-12/12 " src="./Copy of Copy of Sales Product Website - Products.png" alt="">
             <img  class="bg-cover h- 12/12 w-12/12" src="./Copy of Copy of Sales Product Website - Products (2).png" alt="">
